---
title: Run Status & Session Status State Machines
---

%% State Machine 1 — Run Status
stateDiagram-v2
    direction LR

    [*] --> pending
    pending --> ingesting : Temporal workflow starts Phase 1
    ingesting --> cancelled : check_worthy_score < 0.4
    ingesting --> analyzing : Phase 1 complete, dispatch Phase 2
    analyzing --> synthesizing : All Phase 2 agents complete
    synthesizing --> completed : Synthesis complete, verdict emitted
    pending --> failed : Temporal workflow error
    ingesting --> failed : Agent activity failure (after retries)
    analyzing --> failed : Agent activity failure (after retries)
    synthesizing --> failed : Synthesizer failure
    completed --> [*]
    cancelled --> [*]
    failed --> [*]

---

%% State Machine 2 — Session Status
stateDiagram-v2
    direction LR

    [*] --> active
    active --> frozen : Run completed, cancelled, or failed
    frozen --> expired : 3-day TTL elapsed
    expired --> [*] : Cleanup deletes all data
